--- a/package.json
+++ b/package.json
@@ -7,8 +7,12 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "antd-mobile": "^2.3.4",
+    "axios": "^0.21.0",
     "history": "^5.0.0",
     "immutable": "^4.0.0-rc.12",
+    "less": "^3.12.2",
+    "less-loader": "^7.0.2",
+    "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router": "^5.2.0",
